--- a/package.json
+++ b/package.json
@@ -9,16 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.7",
-    "@types/nodemailer": "^6.4.17",
-    "axios": "^1.6.0",
-    "classnames": "^2.3.2",
-    "date-fns": "^2.30.0",
-    "framer-motion": "^10.18.0",
-    "graphql": "^16.8.1",
-    "html-react-parser": "^5.0.6",
-    "next": "14.0.0",
-    "nodemailer": "^7.0.5",
+    "next": "^14.2.31",
     "react": "^18",
     "react-dom": "^18"
   },
