--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
+    "country-flag-icons": "^1.5.20",
     "lucide-react": "^0.542.0",
     "next": "14.2.31",
     "react": "^18",
